# GVAR-Ingestor

./: CMakeLists.txt  GVAR_Demodulator.grc  README.md  config.yml
src/: decoder.cpp  decoder.h  demodulator.cpp  demodulator.h  main.cpp
src/image/: infrared1_reader.cpp  infrared1_reader.h  infrared2_reader.cpp  infrared2_reader.h  visible_reader.cpp  visible_reader.h
src/processing/: derand.cpp  differentialencoding.cpp  differentialencoding.h  simpledeframer.cpp  simpledeframer.h
